bug 202561 - html mail dialog comes up when it isn't supposed to - r/sr=sspitzer